add lens and mic icons

--- a/index.html
+++ b/index.html
@@ -22,8 +22,13 @@
   <main>
     <div id="container">
       <img src="images/logo.png" alt="google">
-      <form id="main-form" action="#" method="GET">
-        <input type="text">
+      <form id="main-form" action="https://google.com/search" method="GET">
+        <div>
+          <img class="lens" src="images/lens.png" alt="lens">
+          <input class="search" type="text" name="q" value="">
+          <img class="mic" src="images/googlemic_color_24dp.png" alt="microphone">
+        </div>
+
         <div class="buttons-grp">
           <input type="submit" value="Google Search">
           <input type="submit" value="I feel lucky">
@@ -39,12 +44,12 @@
       <a href="#">Advertising</a>
       <a href="#">Business</a>
       <a href="#">About</a>
-      <a href="#">How Search works</a>      
+      <a href="#">How Search works</a>
     </div>
     <div class="right-footer">
       <a href="">privacy</a>
       <a href="">terms</a>
-      <a href="">settings</a>      
+      <a href="">settings</a>
     </div>
   </footer>
 </body>
